# scallop-tk

./: CMakeLists.txt  License.txt  README.md
CMake/: FindCaffe.cmake  FindMacros.cmake  ScallopTK-config-build.cmake.in  ScallopTK-config-install.cmake.in
Documentation/: Manual.docx
ScallopTK/: CMakeLists.txt
ScallopTK/Classifiers/: AdaClassifier.cpp  AdaClassifier.h  CNNClassifier.cpp  CNNClassifier.h  Classifier.cpp  Classifier.h  TopClassifier.cpp  TopClassifier.h  Training.cpp  Training.h  TrainingUtils.cpp  TrainingUtils.h
ScallopTK/Common/: FilesystemUnix.h  FilesystemWin32.h  HelperFunctions.cpp  Threads.h
ScallopTK/EdgeDetection/: EdgeLinking.cpp  EdgeLinking.h  ExpensiveSearch.cpp  ExpensiveSearch.h  GaussianEdges.cpp  GaussianEdges.h  StableSearch.cpp  StableSearch.h  WatershedEdges.cpp  WatershedEdges.h
ScallopTK/FeatureExtraction/: Clustering.cpp  Clustering.h  ColorID.cpp  ColorID.h  FFT.cpp  FFT.h  Gabor.cpp  Gabor.h  HoG.cpp  HoG.h  ShapeID.cpp  ShapeID.h  StemID.cpp  StemID.h
ScallopTK/ObjectProposals/: AdaptiveThresholding.cpp  AdaptiveThresholding.h  CannyPoints.cpp  CannyPoints.h  Consolidator.cpp  Consolidator.h  DoG.cpp  DoG.h  HistogramFiltering.cpp  HistogramFiltering.h  PriorStatistics.cpp  PriorStatistics.h  TemplateApproximator.cpp  TemplateApproximator.h
ScallopTK/Pipelines/: CoreDetector.cpp  CoreDetector.h
ScallopTK/ScaleDetection/: CMakeLists.txt  ImageProperties.cpp  ImageProperties.h  StereoComputation.cpp  StereoComputation.h
ScallopTK/TPL/AdaBoost/: BoostedCommittee.cpp  BoostedCommittee.h  IWeakHypothesis.h  SPHypothesis.cpp  SPHypothesis.h
ScallopTK/TPL/Config/: ConvertUTF.c  ConvertUTF.h  SimpleIni.h
ScallopTK/TPL/Homography/: ScottCamera.cpp  ScottCamera.h
ScallopTK/TPL/KDTree/: kdtree.c  kdtree.h
ScallopTK/Utilities/: Benchmarking.h  ConfigParsing.h  Definitions.h  Display.cpp  Display.h  Filesystem.h  FilesystemUnix.h  FilesystemWin32.h  HelperFunctions.cpp  HelperFunctions.h  SaveImageIcon.h  Threads.h  VisualDebugger.cpp  VisualDebugger.h
Tools/: CMakeLists.txt  FishOrNoFish.cpp  ScallopDetector.cpp
Tools/Models/: GUIEXTRACT_DIR  GUIEXTRACT_LIST  MIPEXTRACT_DIR  MIPEXTRACT_LIST  PROCESS_DIR  PROCESS_LIST  PROCESS_LIST_W_META  PROCESS_LIST_W_METADATA  PROCESS_METALIST  SYSTEM_SETTINGS  TRAINING_MODE  TRAIN_USING_LEFT
Tools/Models/Classifiers/: BrownGentlev2  CNN_COMBO  Clam  DEFAULT_ADA  DEFAULT_CNN  Misc  ObjectReal  SandDollar  WhiteGentle  WhiteReal
Tools/Models/Classifiers/AdaBoost/: BrownRealv2  BuriedScallop  FocusGentle  FocusReal  ObjectGentle  Sacs  Urchin
Tools/Models/Classifiers/CNN/: .gitignore  DefaultCNN.caffemodel  DefaultCNN.prototxt
Tools/Models/Classifiers/Combo/: .gitignore  BrownScallopProposer  Seperator.prototxt
Tools/Models/ColorFilterBanks/: dollars_all_32f_rgb_v1.cfilt  environment_32f_rgb_v1.cfilt  scallop_brown_32f_rgb_v1.cfilt  scallop_white_32f_rgb_v1.cfilt
